[tool.poetry]
name = "panorama-to-skybox"
version = "1.0.0"
description = "A web app that converts 2:1 equirectangular panoramas to skybox (cube) images"

license = "MIT"

authors = [
    "Benjamin Dobell <benjamin.dobell@glassechidna.com.au>"
]

readme = 'README.md'

repository = "https://github.com/glassechidna/panoram_to_skybox"
homepage = "https://github.com/glassechidna/panoram_to_skybox"

keywords = ['skybox', 'panorama']

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.1"
Flask-Cors = "^3.0.3"
gunicorn = "^20.0.4"
Pillow = "^7.0.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.10.5"
